Made math mode font-family serif

--- a/template.sty
+++ b/template.sty
@@ -29,6 +29,8 @@
 \setbeamercolor{caption name}{fg=darkred}
 \setbeamercolor{footnote mark}{fg=darkred}
 
+% Math font family
+\renewcommand\mathfamilydefault{\rmdefault}
 
 
 \logo{
